add user input form and display result
co-authored-by: Tom McDowell <tmcdowellddhs@yahoo.com>
dquote> co-authored-by: Emma Gerigscott <elgerig@gmail.com>
dquote> co-authored-by: Kyle Crawford <kcraw217@gmail.com>

--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,23 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Prioritime</title>
 </head>
 <body>
-  
+  <h1>Prioritime</h1>
+  <h4>You will cry with how organized your time has become.</h4>
+
+  <form>
+    <label for="free-time">Enter your free time:</label>
+    <input type="number" id="free-time">
+    <label for="activity1" name = "activities">Enter your activity:</label>
+    <input type="text" id="activity1">
+    <button type="submit">Sort out my life for me pleaeeasesseee</button>
+  </form>
+
+  <div id="output">
+    <p id="available"></p>
+    <p id="activity"></p>
+  </div>
 </body>
 </html>
