add second button to form to add more activities
co-authored-by: Tom McDowell <tmcdowellddhs@yahoo.com>
dquote> co-authored-by: Emma Gerigscott <elgerig@gmail.com>
dquote> co-authored-by: Kyle Crawford <kcraw217@gmail.com>

--- a/src/index.html
+++ b/src/index.html
@@ -13,14 +13,15 @@
   <form>
     <label for="free-time">Enter your free time:</label>
     <input type="number" id="free-time">
-    <label for="activity1" name = "activities">Enter your activity:</label>
-    <input type="text" id="activity1">
-    <button type="submit">Sort out my life for me pleaeeasesseee</button>
+    <label for="activity1">Enter your activity:</label>
+    <input type="text" name="activities" id="activity1">
+    <button type="submit">Prioritize me, Captain!</button>
   </form>
+  <button id="add-activity">Add Activity</button>
 
   <div id="output">
     <p id="available"></p>
-    <p id="activity"></p>
+    <div id="activity"></div>
   </div>
 </body>
 </html>
