change 'available' to div
co-authored-by: Tom McDowell <tmcdowellddhs@yahoo.com>
dquote> co-authored-by: Emma Gerigscott <elgerig@gmail.com>
dquote> co-authored-by: Kyle Crawford <kcraw217@gmail.com>

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
   <button id="add-activity">Add Activity</button>
 
   <div id="output">
-    <p id="available"></p>
+    <div id="available"></div>
     <div id="activity"></div>
   </div>
 </body>
