try and catch user free time input, print error message to user

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 <body>
   <h1>PrioriTime</h1>
   <h4>You will cry with how organized your time has become.</h4>
-
+  <div id="error-msg"></div>
   <form>
     <label for="free-time">Enter your free time:</label>
     <input type="number" id="free-time">
