--- a/src/index.html
+++ b/src/index.html
@@ -25,8 +25,8 @@
         <li><input type="text" name="priorities"></li>
         <li><input type="text" name="priorities"></li>
         <li><input type="text" name="priorities"></li>
-        <button id="add-more-inputs">+</button>
       </ol>
+      <div id="add-more-inputs">+</div>
       <button type="submit">Generate Priority List</button>
     </form>
   </div>
