--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,16 @@
   <h4>You will cry with how organized your time has become.</h4>
 
   <form>
+    <select id="dayOf">
+      <option selected disabled>Please select a day</option>
+      <option value="monday">Monday</option>
+      <option value="tuesday">Tuesday</option>
+      <option value="wednesday">Wednesday</option>
+      <option value="thursday">Thursday</option>
+      <option value="friday">Friday</option>
+      <option value="saturday">Saturday</option>
+      <option value="sunday">Sunday</option>
+    </select>
     <label for="free-time">Enter your free time:</label>
     <input type="number" id="free-time">
     <button type="submit">Prioritize me, Captain!</button>
