--- a/src/index.html
+++ b/src/index.html
@@ -12,14 +12,11 @@
   <button id="info">?</button>
   <div id="info-popup" class="hidden">
     <div id="exit-popup">&#10005;</div>
-    <p>The trick to enjoying your time and making the most of it is to limit your priorities. List everything you think you want to do here. Later on, you can refer to your list while you determine your daily free time and begin allocating it to your priorities. We recommend sticking with your top 5.</p>
+    <p>The trick to enjoying your time and making the most of it is to <em>limit your priorities</em>. 
+    <p>List everything you think you want to do here, like become famous, or be a dog walker, or play with your kids more.</p>
+    <p>As you allocate your free time refer to this initial list.</p>
     <form id="priority-list">
       <ol>
-        <li><input type="text" name="priorities"></li>
-        <li><input type="text" name="priorities"></li>
-        <li><input type="text" name="priorities"></li>
-        <li><input type="text" name="priorities"></li>
-        <li><input type="text" name="priorities"></li>
         <li><input type="text" name="priorities"></li>
         <li><input type="text" name="priorities"></li>
         <li><input type="text" name="priorities"></li>
