add username input and update handleForm
co-authored-by: Kyle Crawford <kcraw217@gmail.com>

--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,7 @@
   </div>
 
   <form id="free-time-form">
+    <input type="text" placeholder="Please Enter Your Name" id="userName" >
     <select id="dayOf">
       <option selected disabled>Please select a day</option>
       <option value="monday">Monday</option>
