style main grid and fix popup

--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,10 @@
     <div id="output">
       <div id="week"></div>
     </div>
-    <div id="goal-list"></div>
+    <div id="goal-list" class="hidden">
+      <h2>My Goals:</h2>
+      <ol></ol>
+    </div>
     <div id="error-msg"></div>
   </div>
 </body>
