style free time form

--- a/src/index.html
+++ b/src/index.html
@@ -24,9 +24,10 @@
         <option value="saturday">Saturday</option>
         <option value="sunday">Sunday</option>
       </select>
-      <label for="free-time">Enter your free time:</label>
-      <input type="number" id="free-time" onfocus="this.value=''">
-      <button type="submit">Add day</button>
+      <label for="free-time">Enter your free time:
+        <input type="number" id="free-time" onfocus="this.value=''">
+        <button type="submit">+</button>
+      </label>
     </form>
     <button id="info">?</button>
   </div> 
