add an animated background image of blanch.

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,10 @@
   <title>Prioritime</title>
 </head>
 <body>
+  <div class="background-guys">
+    <div class="img1"></div>
+    <div class="img2"></div>
+  </div>
   <header>
     <h1>PrioriTime</h1>
     <h4>You will cry with how organized your time has become.</h4>
