--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,9 @@
   <div class="background-guys">
     <div class="img1"></div>
     <div class="img2"></div>
+    <div class="img3"></div>
+    <div class="img4"></div>
+    <div class="img5"></div>
   </div>
   <header>
     <h1>PrioriTime</h1>
