add our amazing background helpersgit add src

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
     <div class="img3"></div>
     <div class="img4"></div>
     <div class="img5"></div>
+    <div class="img6"></div> 
   </div>
   <header>
     <h1>PrioriTime</h1>
