add guy containers for where the guys live.

--- a/src/index.html
+++ b/src/index.html
@@ -73,6 +73,11 @@
         <button type="submit">Generate Priority List</button>
       </form>
     </div>
+    <div id="guy-container" class="hidden"> 
+      <div id="guys-div">
+        <img src="../src/assets/images/blanch.png" alt="picture of blanch">
+      </div>
+    </div>
 
     <div id="output">
       <div id="week"></div>
